* Fixed img stretch, changed folders structure

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -35,6 +35,7 @@ a:hover {
 img {
   width: 33%;
   flex-grow: 1;
+  object-fit: cover;
 }
 
 .item {
